--- a/static/style/index.css
+++ b/static/style/index.css
@@ -21,11 +21,11 @@ a,a:hover,a:active,a:focus{
 /* icon */
 @font-face {
   font-family: 'iconfont';
-  src: url('http://at.alicdn.com/t/font_1428652248_3017306.eot'); /* IE9*/
-  src: url('http://at.alicdn.com/t/font_1428652248_3017306.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('http://at.alicdn.com/t/font_1428652248_3017306.woff') format('woff'), /* chrome、firefox */
-  url('http://at.alicdn.com/t/font_1428652248_3017306.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-  url('http://at.alicdn.com/t/font_1428652248_3017306.svg#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('font/font_1428652248_3017306.eot'); /* IE9*/
+  src: url('font/font_1428652248_3017306.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('font/font_1428652248_3017306.woff') format('woff'), /* chrome、firefox */
+  url('font/font_1428652248_3017306.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  url('font/font_1428652248_3017306.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
 .icon{
   display: inline-block;
